resolucao bundle inicial

--- a/src/index.html
+++ b/src/index.html
@@ -9,5 +9,6 @@
 </head>
 <body>
   <app-root></app-root>
+  <script src="https://cdn.plot.ly/plotly-2.XX.0.min.js" defer></script>
 </body>
 </html>
